// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Context Default 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View
        testID="question-title"
      >
        <View
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {
                  "marginVertical": 0,
                  "textAlign": "center",
                },
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 17,
                    "fontWeight": "700",
                    "marginBottom": 17,
                    "marginTop": 17,
                    "marginVertical": 0,
                    "textAlign": "center",
                  }
                }
              >
                Better now
              </Text>
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <Text
          allowFontScaling={true}
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "textAlign": "left",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
        </Text>
        <Image
          source={
            Object {
              "uri": "gr\\\\",
            }
          }
          style={
            Array [
              Array [
                Object {
                  "height": 200,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "width": 200,
                },
                Object {},
              ],
              Object {
                "height": 100,
                "resizeMode": "cover",
                "width": 100,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
            "paddingHorizontal": 24,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 17,
                "fontWeight": "700",
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#00B0FF",
              },
              undefined,
              undefined,
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Context With Image 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View
        testID="question-title"
      >
        <View
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {
                  "marginVertical": 0,
                  "textAlign": "center",
                },
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 17,
                    "fontWeight": "700",
                    "marginBottom": 17,
                    "marginTop": 17,
                    "marginVertical": 0,
                    "textAlign": "center",
                  }
                }
              >
                Better now
              </Text>
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
          Object {
            "height": 180,
            "width": 320,
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "https://api.coorpacademy.com/api-service/medias?url=https%3A%2F%2Fapi-staging.coorpacademy.com%2Fapi-service%2Fmedias%3Fh%3D400%26w%3D400%26q%3D90%26url%3Dhttps%3A%2F%2Fstatic.coorpacademy.com%2Fcontent%2FCoorpAcademy%2Fcontent%2FcockpitRecette-joan%2Fdefault%2Fcorbeau-1501504511632.jpg&m=contain&q=90&w=640&h=360",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="context-resource-img"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <Text
          allowFontScaling={true}
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "textAlign": "left",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
        </Text>
        <Image
          source={
            Object {
              "uri": "gr\\\\",
            }
          }
          style={
            Array [
              Array [
                Object {
                  "height": 200,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "width": 200,
                },
                Object {},
              ],
              Object {
                "height": 100,
                "resizeMode": "cover",
                "width": 100,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
            "paddingHorizontal": 24,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 17,
                "fontWeight": "700",
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#00B0FF",
              },
              undefined,
              undefined,
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Context With PDF 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View
        testID="question-title"
      >
        <View
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {
                  "marginVertical": 0,
                  "textAlign": "center",
                },
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 17,
                    "fontWeight": "700",
                    "marginBottom": 17,
                    "marginTop": 17,
                    "marginVertical": 0,
                    "textAlign": "center",
                  }
                }
              >
                Better now
              </Text>
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <View
      style={
        Array [
          undefined,
          Object {
            "height": 180,
          },
        ]
      }
    >
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Array [
            Object {
              "height": "100%",
              "width": "100%",
            },
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "",
            }
          }
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": undefined,
                "width": undefined,
              },
              undefined,
            ]
          }
          testID="context-resource-pdf-container"
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "width": "45%",
              }
            }
            testID="context-resource-pdf-pdf"
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                }
              }
              testID="context-resource-pdf-pdf-icon"
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={45}
                bbWidth={45}
                color={4294967295}
                focusable={false}
                height={45}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 45,
                      "width": 45,
                    },
                  ]
                }
                tintColor={4294967295}
                vbHeight={24}
                vbWidth={24}
                width={45}
              >
                <RNSVGGroup>
                  <RNSVGPath
                    d="M0 0h24v24H0z"
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGGroup
                    fill={4294967295}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M5 3h10v4h4v1h2V5.586L16.414 1H5c-1.103 0-2 .898-2 2v5h2V3zM19 21H5v-1H3v1c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-1h-2v1zM9 10v8h2c2.206 0 4-1.794 4-4s-1.794-4-4-4H9zm4 4c0 1.103-.897 2-2 2v-4c1.103 0 2 .898 2 2zM22 12v-2h-4c-1.103 0-2 .898-2 2v6h2v-3h3v-2h-3v-1h4zM4 16h1c1.654 0 3-1.346 3-3s-1.346-3-3-3H2v8h2v-2zm0-4h1a1.001 1.001 0 010 2H4v-2z"
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              style={
                Object {
                  "height": 24,
                  "width": 24,
                }
              }
            />
            <View
              testID="context-resource-pdf-pdf-button"
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "backgroundColor": "transparent",
                    "borderColor": "#FFFFFF",
                    "borderRadius": 32,
                    "borderWidth": 2,
                    "flexDirection": "row",
                    "height": 54,
                    "justifyContent": "center",
                    "marginBottom": 0,
                    "opacity": 1,
                    "paddingHorizontal": 24,
                  }
                }
                testID="context-resource-pdf-pdf-button-native"
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 17,
                        "fontWeight": "700",
                        "textAlign": "center",
                      },
                      Object {
                        "color": "#546E7A",
                      },
                      undefined,
                      Object {
                        "color": "#FFFFFF",
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  Open
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <Text
          allowFontScaling={true}
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "textAlign": "left",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
        </Text>
        <Image
          source={
            Object {
              "uri": "gr\\\\",
            }
          }
          style={
            Array [
              Array [
                Object {
                  "height": 200,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "width": 200,
                },
                Object {},
              ],
              Object {
                "height": 100,
                "resizeMode": "cover",
                "width": 100,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
            "paddingHorizontal": 24,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 17,
                "fontWeight": "700",
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#00B0FF",
              },
              undefined,
              undefined,
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Context With Video 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View
        testID="question-title"
      >
        <View
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {
                  "marginVertical": 0,
                  "textAlign": "center",
                },
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 17,
                    "fontWeight": "700",
                    "marginBottom": 17,
                    "marginTop": 17,
                    "marginVertical": 0,
                    "textAlign": "center",
                  }
                }
              >
                Better now
              </Text>
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#14171A",
            "overflow": "hidden",
          },
          false,
          Object {
            "height": 180,
          },
        ]
      }
      testID="context-resource-video-container"
    >
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Array [
            Object {
              "height": "100%",
              "width": "100%",
            },
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://player.vimeo.com/external/85569724.sd.mp4?s=43df5df0d733011263687d20a47557e4",
            }
          }
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": undefined,
                "width": undefined,
              },
              undefined,
            ]
          }
          testID="context-resource-video-preview-container"
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="context-resource-video-preview-video"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={70}
              bbWidth={70}
              color={4294967295}
              focusable={false}
              height={70}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "flex": 0,
                    "height": 70,
                    "width": 70,
                  },
                ]
              }
              tintColor={4294967295}
              vbHeight={24}
              vbWidth={24}
              width={70}
            >
              <RNSVGGroup>
                <RNSVGPath
                  d="M0 0h24v24H0z"
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
                  fill={4294967295}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <Text
          allowFontScaling={true}
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "textAlign": "left",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
        </Text>
        <Image
          source={
            Object {
              "uri": "gr\\\\",
            }
          }
          style={
            Array [
              Array [
                Object {
                  "height": 200,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "width": 200,
                },
                Object {},
              ],
              Object {
                "height": 100,
                "resizeMode": "cover",
                "width": 100,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
            "paddingHorizontal": 24,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 17,
                "fontWeight": "700",
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#00B0FF",
              },
              undefined,
              undefined,
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Context With badly formatted video 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View
        testID="question-title"
      >
        <View
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {
                  "marginVertical": 0,
                  "textAlign": "center",
                },
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 17,
                    "fontWeight": "700",
                    "marginBottom": 17,
                    "marginTop": 17,
                    "marginVertical": 0,
                    "textAlign": "center",
                  }
                }
              >
                Better now
              </Text>
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <Text
          allowFontScaling={true}
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "textAlign": "left",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
        </Text>
        <Image
          source={
            Object {
              "uri": "gr\\\\",
            }
          }
          style={
            Array [
              Array [
                Object {
                  "height": 200,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "width": 200,
                },
                Object {},
              ],
              Object {
                "height": 100,
                "resizeMode": "cover",
                "width": 100,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
            "paddingHorizontal": 24,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 17,
                "fontWeight": "700",
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#00B0FF",
              },
              undefined,
              undefined,
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Context Without Layout 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View
        testID="question-title"
      >
        <View
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {
                  "marginVertical": 0,
                  "textAlign": "center",
                },
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 17,
                    "fontWeight": "700",
                    "marginBottom": 17,
                    "marginTop": 17,
                    "marginVertical": 0,
                    "textAlign": "center",
                  }
                }
              >
                Better now
              </Text>
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <View
      style={
        Array [
          undefined,
          Object {
            "height": 180,
          },
        ]
      }
    >
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Array [
            Object {
              "height": "100%",
              "width": "100%",
            },
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "",
            }
          }
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": undefined,
                "width": undefined,
              },
              undefined,
            ]
          }
          testID="context-resource-pdf-container"
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "width": "45%",
              }
            }
            testID="context-resource-pdf-pdf"
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                }
              }
              testID="context-resource-pdf-pdf-icon"
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={45}
                bbWidth={45}
                color={4294967295}
                focusable={false}
                height={45}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 45,
                      "width": 45,
                    },
                  ]
                }
                tintColor={4294967295}
                vbHeight={24}
                vbWidth={24}
                width={45}
              >
                <RNSVGGroup>
                  <RNSVGPath
                    d="M0 0h24v24H0z"
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGGroup
                    fill={4294967295}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M5 3h10v4h4v1h2V5.586L16.414 1H5c-1.103 0-2 .898-2 2v5h2V3zM19 21H5v-1H3v1c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-1h-2v1zM9 10v8h2c2.206 0 4-1.794 4-4s-1.794-4-4-4H9zm4 4c0 1.103-.897 2-2 2v-4c1.103 0 2 .898 2 2zM22 12v-2h-4c-1.103 0-2 .898-2 2v6h2v-3h3v-2h-3v-1h4zM4 16h1c1.654 0 3-1.346 3-3s-1.346-3-3-3H2v8h2v-2zm0-4h1a1.001 1.001 0 010 2H4v-2z"
                    />
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <View
              style={
                Object {
                  "height": 24,
                  "width": 24,
                }
              }
            />
            <View
              testID="context-resource-pdf-pdf-button"
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "backgroundColor": "transparent",
                    "borderColor": "#FFFFFF",
                    "borderRadius": 32,
                    "borderWidth": 2,
                    "flexDirection": "row",
                    "height": 54,
                    "justifyContent": "center",
                    "marginBottom": 0,
                    "opacity": 1,
                    "paddingHorizontal": 24,
                  }
                }
                testID="context-resource-pdf-pdf-button-native"
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 17,
                        "fontWeight": "700",
                        "textAlign": "center",
                      },
                      Object {
                        "color": "#546E7A",
                      },
                      undefined,
                      Object {
                        "color": "#FFFFFF",
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  Open
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <Text
          allowFontScaling={true}
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "textAlign": "left",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
        </Text>
        <Image
          source={
            Object {
              "uri": "gr\\\\",
            }
          }
          style={
            Array [
              Array [
                Object {
                  "height": 200,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "width": 200,
                },
                Object {},
              ],
              Object {
                "height": 100,
                "resizeMode": "cover",
                "width": 100,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
            "paddingHorizontal": 24,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 17,
                "fontWeight": "700",
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#00B0FF",
              },
              undefined,
              undefined,
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Context Without Layout 2 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
      "justifyContent": "space-between",
      "paddingBottom": 24,
      "paddingTop": 32,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View
        testID="question-title"
      >
        <View
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {
                  "marginVertical": 0,
                  "textAlign": "center",
                },
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              selectable={false}
              style={
                Array [
                  Object {},
                  Object {},
                ]
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  Object {
                    "color": "#14171A",
                    "fontSize": 17,
                    "fontWeight": "700",
                    "marginBottom": 17,
                    "marginTop": 17,
                    "marginVertical": 0,
                    "textAlign": "center",
                  }
                }
              >
                Better now
              </Text>
            </Text>
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View>
      <View
        style={Object {}}
      >
        <Text
          allowFontScaling={true}
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "color": "#546E7A",
                  "fontSize": 17,
                  "textAlign": "left",
                }
              }
            >
              You probably think that you are better now 
            </Text>
          </Text>
        </Text>
        <Image
          source={
            Object {
              "uri": "gr\\\\",
            }
          }
          style={
            Array [
              Array [
                Object {
                  "height": 200,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "width": 200,
                },
                Object {},
              ],
              Object {
                "height": 100,
                "resizeMode": "cover",
                "width": 100,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      testID="button-redirect-question"
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderColor": "#00B0FF",
            "borderRadius": 32,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 54,
            "justifyContent": "center",
            "marginBottom": 0,
            "opacity": 1,
            "paddingHorizontal": 24,
          }
        }
        testID="button-redirect-question-native"
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 17,
                "fontWeight": "700",
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#00B0FF",
              },
              undefined,
              undefined,
            ]
          }
        >
          Go to question
        </Text>
      </View>
    </View>
  </View>
</View>
`;
